feat: udpate metadata

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn.tgdd.vn/Products/Images/42/247508/iphone-14-pro-vang-thumb-600x600.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="image" content="https://cdn.tgdd.vn/Products/Images/42/247508/iphone-14-pro-vang-thumb-600x600.jpg">
+    <meta name="description" content="PhoneHub is a website that allows users to filter products by manufacturer and price, users can view product details and add to favorites list and shopping cart." />
+    <link rel="icon" href="https://cdn.tgdd.vn/Products/Images/42/247508/iphone-14-pro-vang-thumb-600x600.jpg" type="image/icon">
+    <title>PhoneHub</title>
   </head>
   <body>
     <div id="root"></div>
