feat: udpate metadata

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://cdn.tgdd.vn/Products/Images/42/247508/iphone-14-pro-vang-thumb-600x600.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="image" content="https://cdn.tgdd.vn/Products/Images/42/247508/iphone-14-pro-vang-thumb-600x600.jpg">
+    <meta property="og:image" content="https://cdn.tgdd.vn/Products/Images/42/247508/iphone-14-pro-vang-thumb-600x600.jpg">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="436">
+    <meta property="og:image:height" content="228">
     <meta name="description" content="PhoneHub is a website that allows users to filter products by manufacturer and price, users can view product details and add to favorites list and shopping cart." />
-    <link rel="icon" href="https://cdn.tgdd.vn/Products/Images/42/247508/iphone-14-pro-vang-thumb-600x600.jpg" type="image/icon">
+    <link rel="icon" href="https://cdn.tgdd.vn/Products/Images/42/247508/iphone-14-pro-vang-thumb-600x600.jpg" type="image/x-icon">
     <title>PhoneHub</title>
   </head>
   <body>
